recursion.lessons.recursion.tree.Tree.scala.error
Tree:10: error: type mismatch;
 found   : Unit
 required: Double
		tree(steps-1,shrink*length,droite(angle),shrink);
                                                 ^Tree:12: error: type mismatch;
 found   : Unit
 required: Double
		tree(steps-1,shrink*length,gauche(angle),shrink);
                                                 ^